Fixed icons and spacing of header

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -37,18 +37,31 @@ header {
   background-color: #f9f9f9; //REPLACE WITH VARIABLE
   display: flex;
   z-index: 99;
+  justify-content: flex-end;
+  flex-direction: row-reverse;
+
+  button {
+    appearance: none;
+    background: none;
+    outline: none;
+    border: none;
+    font-size: 28px;
+    margin: 0 20px;
+  }
 
   h1 {
     font-size: 2rem;
+    margin: auto;
 
     a {
       text-decoration: none;
     }
   }
 }
-//-------------------Hamburger icon styling
+//-------------------Hamburger icon styling-------------------
 .hamburger {
   position: relative;
+
   display: block;
   width: 35px;
   cursor: pointer;
@@ -68,16 +81,17 @@ header {
   width: 100%;
   height: 5px;
   background-color: #fff;
-  margin: 6px 0px;
+  margin: 3px 0px;
   transition: 0.4s;
+  border-radius: 3px;
 }
 
 .hamburger.isActive::before {
-  transform: translate(-9px, 6px) rotate(-45deg);
+  transform: translate(1px, 6px) rotate(-45deg);
 }
 
 .hamburger.isActive::after {
-  transform: translate(-9px, -16px) rotate(45deg);
+  transform: translate(1px, -16px) rotate(45deg);
 }
 
 .hamburger.isActive .bar {
@@ -88,7 +102,7 @@ header {
 .hamburgerNav {
   position: fixed;
   top: 0;
-  left: 100%;
+  left: -100%;
   width: 100%;
   min-height: 100vh;
   display: block;
@@ -99,12 +113,14 @@ header {
 
   ul {
     list-style: none;
+    padding: 0;
   }
   a {
     display: block;
     width: 100%;
     max-width: 200px;
     margin: 0 auto 16px;
+    padding: 12px 16px;
     background-color: #726da8; //REPLACE WITH VARIABLE
     color: #fff;
     text-decoration: none;
@@ -116,18 +132,5 @@ header {
 
   &.isActive {
     left: 0;
-  }
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
   }
 }
